<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VhodActivity">

    <ImageView
        android:id="@+id/imageAvatar"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:onClick="onClickAvayar"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/programmer"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/bAvatar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onClickAvatar"
        android:text="@string/avatar"
        app:layout_constraintEnd_toEndOf="@+id/ettpnLogin"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/ettpnLogin"
        app:layout_constraintTop_toBottomOf="@+id/imageAvatar" />

    <EditText
        android:id="@+id/ettpnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imageAvatar"
        app:layout_constraintStart_toStartOf="@+id/imageAvatar"
        app:layout_constraintTop_toBottomOf="@+id/bAvatar" />

    <EditText
        android:id="@+id/ettpnParol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/Parol"
        android:inputType="textWebPassword"
        app:layout_constraintEnd_toEndOf="@+id/ettpnLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ettpnLogin"
        app:layout_constraintTop_toBottomOf="@+id/ettpnLogin" />

    <EditText
        android:id="@+id/ettpnName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/ettpnParol"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ettpnParol"
        app:layout_constraintTop_toBottomOf="@+id/ettpnParol" />

    <EditText
        android:id="@+id/ettpnFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/family"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/ettpnName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ettpnName"
        app:layout_constraintTop_toBottomOf="@+id/ettpnName" />

    <EditText
        android:id="@+id/ettpnOtchestvo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Otchestvo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/ettpnFamily"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ettpnFamily"
        app:layout_constraintTop_toBottomOf="@+id/ettpnFamily" />

    <Button
        android:id="@+id/bNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClickDone"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="@+id/ettpnParol"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ettpnParol"
        app:layout_constraintTop_toBottomOf="@+id/ettpnOtchestvo" />

    <TextView
        android:id="@+id/textmasage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/bAvatar"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/bAvatar"
        tools:layout_editor_absoluteY="210dp" />

</androidx.constraintlayout.widget.ConstraintLayout>